--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@react-native-firebase/app": "^17.3.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "add": "^2.0.6",
+    "babel-plugin-react-native-classname-to-style": "^1.2.2",
+    "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
+    "react-native-css-transformer": "^1.2.4",
+    "react-native-paper": "^5.5.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
